--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1708,6 +1708,7 @@ a:focus {
 
 .info_section form input::placeholder {
   color: #ffffff;
+  // color: #ffffff;
 }
 
 .info_section form button {
